Navbar of homepage in progress

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<%= render 'views/components/navbar' %>
+<%= render 'components/navbar' %>
 
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
