--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,18 @@
-.navbar-lewagon {
+.navbar-spacesheep {
   justify-content: space-between;
   background: white;
 }
 
-.navbar-lewagon .navbar-collapse {
+.navbar-spacesheep .navbar-collapse {
   flex-grow: 0;
+  // color: $primary;
 }
 
-.navbar-lewagon .navbar-brand img {
+.navbar-spacesheep .navbar-brand img {
   width: 40px;
+}
+
+#logo {
+  width: 100;
+  object-fit: cover;
 }
