Homepage (navbar, banner, footer, button, primary-color) all done

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,6 @@
 
   <body>
     <%= yield %>
-    <%= render "components/flashes" %>
+    <%# <%= render "components/flashes" %>
   </body>
 </html>
