--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,8 @@
 .navbar-spacesheep {
   justify-content: space-between;
   background: white;
+  position: sticky;
+    top: 0px;
 }
 
 .navbar-spacesheep .navbar-collapse {
@@ -15,4 +17,12 @@
 #logo {
   width: 100;
   object-fit: cover;
+}
+
+#spacesheep-name {
+  font-size: 20px;
+  font-weight: bolder;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: $primary;
+  letter-spacing: 3px;
 }
