--- a/app/views/components/_banner.html.erb
+++ b/app/views/components/_banner.html.erb
@@ -1,4 +1,4 @@
-<div class="spacesheep-banner">
+<div class="spacesheep-banner d-flex align-items-center">
   <div class="container">
     <h1><strong>Wanna discover the Universe ?</strong></h1>
     <p>No Elun Musk needed...</p>
