--- a/app/views/components/_banner.html.erb
+++ b/app/views/components/_banner.html.erb
@@ -3,6 +3,7 @@
     <h1><strong>Wanna discover the Universe ?</strong></h1>
     <p>No Elun Musk needed...</p>
     <p>Trust Spacesheep and rent your own spaceship!</p>
+    <p><span data-controller="typed-js"></span></p>
     <%= link_to "See our available spaceships! 🚀", spaceships_path, class: "btn-flat"%>
   </div>
 </div>
