render navbar et footer sur la show

--- a/app/views/spaceships/show.html.erb
+++ b/app/views/spaceships/show.html.erb
@@ -1,3 +1,4 @@
+<%= render 'components/navbar' %>
 
 <div class="container flex"></div>
   <div class="card-spaceship col-5 m-5">
@@ -17,5 +18,5 @@
       <%= f.submit "Book now !", class: "btn-flat" %>
     <% end %>
   </div>
-  
+<%= render 'components/footer' %>
 </div>
