Link and buttons OK for index and view

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,9 @@
   </head>
 
   <body>
+    <%= render "components/navbar" %>
     <%= yield %>
     <%# <%= render "components/flashes" %>
+    <%= render "components/footer" %>
   </body>
 </html>
-  
