--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-spacesheep">
   <div class="container-fluid">
-    <%= link_to "pages/home", class: "navbar-brand" do %>
+    <%= link_to root_path, class: "navbar-brand" do %>
     <div class="d-flex align-items-center">
       <%= image_tag "spacesheep-logo.png" %>
       <h3 id="spacesheep-name" class="ms-2"> Spacesheep </h3>
@@ -15,7 +15,7 @@
       <ul class="navbar-nav me-auto">
         <%# if user_signed_in? %>
           <li class="nav-item active">
-            <%= link_to "See all spaceships", "#", class: "nav-link" %>
+            <%= link_to "See all spaceships", spaceships_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "My bookings", "#", class: "nav-link" %>
