--- a/app/views/spaceships/show.html.erb
+++ b/app/views/spaceships/show.html.erb
@@ -1,19 +1,30 @@
-<div class="container flex"></div>
-  <div class="card-spaceship col-5 m-5">
-    <h2><strong><%= @spaceship.name %></strong></h2>
-    <p><strong>Price : <%= @spaceship.price %> €</strong></p>
-    <p>Description : <%= @spaceship.description %></p>
-    <p>Weapons : <%= @spaceship.weapons %></p>
-    <p>Energy : <%= @spaceship.energy %></p>
-    <p>Seats : <%= @spaceship.seats %></p>
-    <p>Address : <%= @spaceship.address %></p>
-    <p>Gravity : <%= @spaceship.gravity%></p>
-  </div>
-  <div class="booking-date col-5 m-5">
-    <%= simple_form_for [@spaceship, @booking] do |f| %>
-      <%= f.input :booking_start_date, html5: true %>
-      <%= f.input :booking_end_date, html5: true %>
-      <%= f.submit "Book now !", class: "btn-flat" %>
-    <% end %>
+<div class="container"></div>
+  <div class="element d-flex">
+    <div class="left col-5 m-5">
+      <div class="card-spaceship border-bottom">
+        <h2><strong><%= @spaceship.name %></strong></h2>
+        <p><strong>💰 <%= @spaceship.price %> €</strong></p>
+        <p>📋 <%= @spaceship.description %></p>
+        <p>⚔️ <%= @spaceship.weapons %></p>
+        <p>⚡ <%= @spaceship.energy %></p>
+        <p>💺 <%= @spaceship.seats %></p>
+        <p>📍 <%= @spaceship.address %></p>
+        <p>🪶 <%= @spaceship.gravity%></p>
+      </div>
+      <div class="booking-date mt-4">
+        <%= simple_form_for [@spaceship, @booking] do |f| %>
+          <%= f.input :booking_start_date, html5: true %>
+          <%= f.input :booking_end_date, html5: true %>
+          <%= f.submit "Book now !", class: "btn-flat" %>
+        <% end %>
+      </div>
+    </div>
+    <div class="right col-5 m-5">
+      <div class="photo">
+        <% @spaceship.photos.each do |photo| %>
+          <%= cl_image_tag photo.key, width: 600 %>
+        <% end %>
+      </div>
+    </div>
   </div>
 </div>
