path corrected for root

--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-spacesheep">
   <div class="container-fluid">
-    <%= link_to eroot_path, class: "navbar-brand" do %>
+    <%= link_to root_path, class: "navbar-brand" do %>
     <div class="d-flex align-items-center">
       <%= image_tag "spacesheep-logo.png" %>
       <h3 id="spacesheep-name" class="ms-2"> Spacesheep </h3>
