Index spaceships - Ciel étoilé scintillant

--- a/app/views/spaceships/index.html.erb
+++ b/app/views/spaceships/index.html.erb
@@ -1,4 +1,5 @@
-<div class="spaceships-index-background-image">
+<%# <div class="spaceships-index-background-image"> %>
+<div data-controller="animated-stars-js">
   <h1 class= "text-center m-3">All our available spaceships</h1>
   <%# faire des colonnes  %>
 
