--- a/app/assets/stylesheets/components/_background_image.scss
+++ b/app/assets/stylesheets/components/_background_image.scss
@@ -1,8 +1,34 @@
-// Background image de l'index de spaceships
-.spaceships-index-background-image {
-  background-image: url("stars-sky.jpg");
-  background-size: cover;
-  background-position: center;
-  // background-image: linear-gradient(rgba(0,0,0,1));
-  // background-color: blue;
+// // Background image de l'index de spaceships
+// .spaceships-index-background-image {
+//   background-image: url("stars-sky.jpg");
+//   background-size: cover;
+//   background-position: center;
+//   // background-image: linear-gradient(rgba(0,0,0,1));
+//   // background-color: blue;
+// }
+
+body {
+  background: rgb(14, 4, 45);
+  // overflow: hidden;
+}
+
+.star {
+  background: #fff;
+  position: absolute;
+  -webkit-animation: blinkAnim 5s infinite;
+  -moz-animation: blinkAnim 5s infinite;
+  -ms-animation: blinkAnim 5s infinite;
+  -o-animation: blinkAnim 5s infinite;
+  animation: blinkAnim 5s infinite;
+}
+
+@keyframes blinkAnim {
+  50%   { opacity: 0; }
+  from { opacity: 1; }
+  to   { opacity: 1; }
+}
+@-webkit-keyframes blinkAnim {
+  from { opacity: 1; }
+  50%   { opacity: 0; }
+  to   { opacity: 1; }
 }
