--- a/app/views/spaceships/index.html.erb
+++ b/app/views/spaceships/index.html.erb
@@ -1,6 +1,6 @@
 <%# <div class="spaceships-index-background-image"> %>
-<div data-controller="animated-stars-js">
-  <h1 class= "text-center m-3">All our available spaceships</h1>
+<div class="spaceships-index-body" data-controller="animated-stars-js">
+  <h1 class= "text-center page-title">All our available spaceships</h1>
   <%# faire des colonnes  %>
 
   <div class="spaceship-cards container justify-content-center ">
