--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,11 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
 
-  <body>
+  <body style=" display: flex; min-height: 100vh; flex-direction:column;">
     <%= render "components/navbar" %>
+    <main style="flex: 1;">
     <%= yield %>
+    </main>
     <%# <%= render "components/flashes" %>
     <%= render "components/footer" %>
   </body>
