--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -14,7 +14,7 @@
 }
 .spacesheep-footer-links a {
   color: black;
-  opacity: 0.15;
+  opacity: 0.5;
   text-decoration: none;
   font-size: 12px;
   padding: 0px 10px;
@@ -28,4 +28,6 @@
 
 .spacesheep-footer-copyright {
   font-size: 12px;
+  color: black;
+  opacity: 0.5;
 }
