--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,33 +1,29 @@
 <h1> Bookings index </h1>
 <h2> User Bookings </h2>
-<% @user_bookings.each do |user_booking| %>
-  <div class= "row" >
-    <div class="notification">
-      <img src='' class="avatar-large" />
-      <div class="notification-content">
-        <p><small><%= "Réservation à partir du #{user_booking.booking_start_date} jusqu'au #{user_booking.booking_end_date}" %></small></p>
-        <p>📍<%= user_booking.spaceship.address %></p>
-      </div>
 
-      <div class="notification-actions">
-        <a href="#">Edit <i class="fas fa-pencil-alt"></i></a>
-        <a href="#">Delete <i class="far fa-trash-alt"></i></a>
-      </div>
+
+<% @user_bookings.each do |user_booking| %>
+  <div class="card-product">
+    <%= cl_image_tag user_booking.spaceship.photos.first.key %>
+    <div class="card-product-infos">
+      <p><small><%= "Booked from #{user_booking.booking_start_date} to #{user_booking.booking_end_date}" %></small></p>
+      <p>📍<%= user_booking.spaceship.address %></p>
+      <p> total price <%= user_booking.total_price %>€</p>
     </div>
   </div>
 <% end %>
 
-</div>
-  <div class= "row" >
-    <% @user_bookings.each do |user_booking| %>
-      <p class= "row text-center">
-        <p class= "row d-flex justify-content-between " >
-          <%= user_booking.spaceship.name %>
-          <%= "du #{user_booking.booking_start_date} au #{user_booking.booking_end_date}" %>
-        </p>
-        <%= user_booking.total_price %>
-        <%= user_booking.spaceship.address %>
-      </p>
+  <% if @owner_bookings.present? %>
+    <h2> Owner Bookings </h2>
+    <% @owner_bookings.each do |owner_booking| %>
+      <div class="card-product">
+        <%= cl_image_tag owner_booking.spaceship.photos.first.key %>
+        <div class="card-product-infos">
+          <p><small><%= "Booked from #{owner_booking.booking_start_date} to #{owner_booking.booking_end_date}" %></small></p>
+          <p>📍<%= owner_booking.spaceship.address %></p>
+          <p> total price <%= owner_booking.total_price %>€</p>
+        </div>
+        ✅❌
+      </div>
     <% end %>
-  </div>
-<h2> Owner Bookings </h2>
+  <% end %>
