Front improvement + fonts import

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,3 +10,11 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+
+// Nos fonts family importées : cf. application.html.erb
+// font-family: 'Comfortaa', cursive;    => Pour textes !
+// font-family: 'IBM Plex Sans Devanagari', sans-serif;  => Pour titres !
+
+// font-family: 'Homemade Apple', cursive;
+// font-family: 'Prata', serif;
