--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -13,6 +13,7 @@
   align-items: center;
 }
 .spacesheep-footer-links a {
+  font-family: 'Comfortaa', cursive;
   color: black;
   opacity: 0.5;
   text-decoration: none;
@@ -27,6 +28,7 @@
 }
 
 .spacesheep-footer-copyright {
+  font-family: 'Comfortaa', cursive;
   font-size: 12px;
   color: black;
   opacity: 0.5;
