--- a/app/views/components/_banner.html.erb
+++ b/app/views/components/_banner.html.erb
@@ -4,6 +4,8 @@
     <p>No Elun Musk needed...</p>
     <p>Trust Spacesheep and rent your own spaceship!</p>
     <p><span data-controller="typed-js"></span></p>
+    <div class="d-flex justify-content-center align-items-center">
     <%= link_to "See our available spaceships! 🚀", spaceships_path, class: "btn-flat"%>
+    </div>
   </div>
 </div>
