--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -8,13 +8,12 @@
 
 .spacesheep-banner h1 {
   // text-align: center;
+  font-family: 'IBM Plex Sans Devanagari', sans-serif;
   margin: 0;
   padding-bottom: 40px;
-  // rgba(149,14,195,1) 0%, rgba(177,245,249,1) 50%, rgba(23,23,215,1) 100%
   background: linear-gradient(to right, white 0%, white 50%, rgb(65, 3, 163) 100%);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
-  // color: white;
   text-shadow: 1px 1px 3px rgba(255, 255, 255, 0.2);
   font-size: 50px;
   font-weight: bold;
@@ -22,9 +21,10 @@
 
 .spacesheep-banner p {
   // text-align: center;
-  font-size: 30px;
-  padding-bottom: 20px;
-  margin-bottom: 20px;
+  font-family: 'Comfortaa', cursive;
+  font-size: 22px;
+  padding-bottom: 10px;
+  margin-bottom: 30px;
   color: white;
   // opacity: .8;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
