--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,5 +1,6 @@
 .navbar-spacesheep {
   justify-content: space-between;
+  font-family: 'Comfortaa', cursive;
   background: white;
   position: sticky;
     top: 0px;
