--- a/app/views/spaceships/show.html.erb
+++ b/app/views/spaceships/show.html.erb
@@ -1,30 +1,32 @@
-<div class="container"></div>
-  <div class="element d-flex">
-    <div class="left col-5 m-5">
-      <div class="card-spaceship border-bottom">
+<div class="spaceships-index-body d-flex" data-controller="animated-stars-js">
+  <div class="card col-5 m-5 p-4 border-0">
+    <div class="card-spaceship border-bottom">
+      <div class="heading-card-spaceship mb-3 d-flex justify-content-between">
         <h2><strong><%= @spaceship.name %></strong></h2>
-        <p><strong>💰 <%= @spaceship.price %> €</strong></p>
-        <p>📋 <%= @spaceship.description %></p>
-        <p>⚔️ <%= @spaceship.weapons %></p>
-        <p>⚡ <%= @spaceship.energy %></p>
-        <p>💺 <%= @spaceship.seats %></p>
-        <p>📍 <%= @spaceship.address %></p>
-        <p>🪶 <%= @spaceship.gravity%></p>
+        <h4><strong>💰 <%= @spaceship.price %> €</strong></h4>
       </div>
-      <div class="booking-date mt-4">
-        <%= simple_form_for [@spaceship, @booking] do |f| %>
-          <%= f.input :booking_start_date, html5: true %>
-          <%= f.input :booking_end_date, html5: true %>
-          <%= f.submit "Book now !", class: "btn-flat"%>
-        <% end %>
-      </div>
+      <p>📋 <%= @spaceship.description.capitalize %></p>
+      <p>⚔️ <%= @spaceship.weapons.capitalize %></p>
+      <p>⚡ <%= @spaceship.energy.capitalize %> energy</p>
+      <p>💺 <%= @spaceship.seats %> seats</p>
+      <p>📍 <%= @spaceship.address.capitalize %></p>
+      <p><%= @spaceship.gravity ? '✅ Gravity ' : '❌ Gravity' %></p>
     </div>
-    <div class="right col-5 m-5">
-      <div class="photo">
-        <% @spaceship.photos.each do |photo| %>
-          <%= cl_image_tag photo.key, width: 600 %>
-        <% end %>
-      </div>
+    <div class="booking-date mt-4">
+      <%= simple_form_for [@spaceship, @booking] do |f| %>
+        <%= f.input :booking_start_date, html5: true %>
+        <%= f.input :booking_end_date, html5: true %>
+        <div class="btn-submit d-flex justify-content-center">
+          <%= f.submit "Book now !", class: "btn-flat"%>
+        </div>
+      <% end %>
+    </div>
+  </div>
+  <div class="right col-5 m-5">
+    <div class="photo">
+      <% @spaceship.photos.each do |photo| %>
+        <%= cl_image_tag photo.key, width: 600 %>
+      <% end %>
     </div>
   </div>
 </div>
