--- a/app/views/spaceships/index.html.erb
+++ b/app/views/spaceships/index.html.erb
@@ -2,15 +2,16 @@
   <h1 class= "text-center page-title">All our available spaceships</h1>
   <%# faire des colonnes  %>
 
-  <div class="spaceship-cards container justify-content-center ">
+  <div class="container justify-content-center ">
     <%#  dans la div organiser les cards avec col etc %>
     <div class= "row d-flex justify-content-around">
       <% @spaceships.each do |spaceship| %>
-        <div class="card col-4-lg p-0 m-3 shadow" style="width: 18rem;">
-          <img src="<%= cl_image_path spaceship.photos.first.key %>" class="card-img-top" alt="...">
-          <div class="card-body d-flex flex-column justify-content-between">
+        <div class= "index-card">
+          <img src="<%= cl_image_path spaceship.photos.first.key%>", alt="...">
+          <div class="index-card-text">
             <div>
               <p class="card-title"><strong><%= spaceship.name %></strong></p>
+              <p><strong></strong><%= link_to spaceship.name, spaceship_path(spaceship), class: "card-title text-decoration-none stretched-link text-color-black" %></strong></p>
               <p class="card-text"><%= spaceship.address %></p>
               <p><%= spaceship.price %>€/day</p>
             </div>
