Font improvement on banner, bookings, and indexes

--- a/app/views/spaceships/index.html.erb
+++ b/app/views/spaceships/index.html.erb
@@ -1,5 +1,5 @@
 <div class="spaceships-index-body" data-controller="animated-stars-js">
-  <h1 class= "text-center page-title">All our available spaceships</h1>
+  <h1 class= "text-center page-title title-properties">All our available spaceships</h1>
   <%# faire des colonnes  %>
 
   <div class="spaceship-cards container justify-content-center ">
