--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,17 +1,23 @@
-<h1> Bookings index </h1>
-<h2> User Bookings </h2>
+<div class="spaceships-index-body" data-controller="animated-stars-js">
 
+  <h1 class="title-properties text-center"> My bookings </h1>
+  <%# <h2> User Bookings </h2> %>
 
-<% @user_bookings.each do |user_booking| %>
-  <div class="card-product">
-    <%= cl_image_tag user_booking.spaceship.photos.first.key %>
-    <div class="card-product-infos">
-      <p><small><%= "Booked from #{user_booking.booking_start_date} to #{user_booking.booking_end_date}" %></small></p>
-      <p>📍<%= user_booking.spaceship.address %></p>
-      <p> total price <%= user_booking.total_price %>€</p>
+  <% @user_bookings.each do |user_booking| %>
+    <div class="d-flex card-product justify-content-between">
+      <div class="d-flex align-items-center">
+        <%= cl_image_tag user_booking.spaceship.photos.first.key %>
+          <div class="card-product-infos">
+            <p><small><%= "Booked from #{user_booking.booking_start_date} to #{user_booking.booking_end_date}" %></small></p>
+            <p>📍<%= user_booking.spaceship.address %></p>
+            <p> total price <%= user_booking.total_price %>€</p>
+          </div>
+      </div>
+      <div class="align-content-end">
+        <p> Status : <%= user_booking.validated %> </p>
+      </div>
     </div>
-  </div>
-<% end %>
+  <% end %>
 
   <% if @owner_bookings.present? %>
     <h2> Owner Bookings </h2>
@@ -23,7 +29,11 @@
           <p>📍<%= owner_booking.spaceship.address %></p>
           <p> total price <%= owner_booking.total_price %>€</p>
         </div>
+        <div>
+        <p> Status : <%= user_booking.validated %> </p>
+        </div>
         ✅❌
       </div>
     <% end %>
   <% end %>
+</div>
