--- a/app/views/components/_banner.html.erb
+++ b/app/views/components/_banner.html.erb
@@ -1,6 +1,6 @@
 <div class="spacesheep-banner d-flex align-items-center">
   <div class="container">
-    <h1><strong>Wanna discover the Universe ?</strong></h1>
+    <h1 class="title-properties"><strong>Wanna discover the Universe ?</strong></h1>
     <p>No Elun Musk needed...</p>
     <p>Trust Spacesheep and rent your own spaceship!</p>
     <p><span data-controller="typed-js"></span></p>
