--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -23,8 +23,8 @@
           <li class="nav-item dropdown">
             <%= image_tag "rocket.png", class: "avatar-bordered default-avatar-picture", alt: "avatar-bordered ", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "See my bookings", "#", class: "dropdown-item" %>
-              <%= link_to "See my spaceships", "#", class: "dropdown-item" %>
+              <%= link_to "See my bookings", bookings_path, class: "dropdown-item" %>
+              <%= link_to "See my spaceships", spaceships_path, class: "dropdown-item" %>
               <%= link_to "Create a new spaceship", "#", class: "dropdown-item" %>
               <%= link_to "Log out", "#", class: "dropdown-item", data: {turbo_method: :delete} %>
             </div>
