--- a/app/views/spaceships/index.html.erb
+++ b/app/views/spaceships/index.html.erb
@@ -12,7 +12,7 @@
             <div>
               <p class="card-title"><strong><%= spaceship.name %></strong></p>
               <p class="card-text"><%= spaceship.address %></p>
-              <p><%= spaceship.price %>€/day</p>
+              <p><%= spaceship.price %>$/day</p>
             </div>
             <%= link_to "See More/Book", spaceship_path(spaceship), class: "btn btn-primary" %>
           </div>
