--- a/app/views/components/_footer.html.erb
+++ b/app/views/components/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="spacesheep-footer">
+<div class="spacesheep-footer fixed-footer-bottom">
   <div class="spacesheep-footer-links">
     <a href="#"><i class="fa-solid fa-envelope"></i> Contact us </a>
     <a href="#"><i class="fa-solid fa-laptop"></i> Join us </a>
