--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,9 @@
 
   <body style=" display: flex; min-height: 100vh; flex-direction:column;">
     <%= render "components/navbar" %>
-    <main style="flex: 1;">
+    <%# <main style="flex: 1;"> %>
     <%= yield %>
-    </main>
+    <%# </main> %>
     <%# <%= render "components/flashes" %>
     <%= render "components/footer" %>
   </body>
