--- a/app/assets/stylesheets/components/_background_image.scss
+++ b/app/assets/stylesheets/components/_background_image.scss
@@ -26,3 +26,11 @@
   50%   { opacity: 0; }
   to   { opacity: 1; }
 }
+
+.bookings-index-body {
+  background-image: url("spaceship-interior.jpg");
+  background-size: cover;
+  background-position: center;
+  // opacity: 0.8;
+
+}
