--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 70px;
+  height: 70p x;
   width: 100%;
   padding: 0px 30px;
   color: rgba(0,0,0,0.3);
@@ -32,4 +32,12 @@
   font-size: 12px;
   color: black;
   opacity: 0.5;
+}
+
+.fixed-footer-bottom {
+  position: relative;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  height: 70px;
 }
