--- a/app/assets/stylesheets/components/_booking_card.scss
+++ b/app/assets/stylesheets/components/_booking_card.scss
@@ -31,3 +31,11 @@
 .card-product .card-product-infos {
   padding: 16px;
 }
+
+.infos-card {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+  margin: 16px;
+}
