--- a/app/views/spaceships/show.html.erb
+++ b/app/views/spaceships/show.html.erb
@@ -1,9 +1,9 @@
 <div class="container"></div>
   <div class="element d-flex">
-    <div class="left col-5 m-5">
+    <div class="left col-5 m-5" data-controller="calcul-date-js">
       <div class="card-spaceship border-bottom">
         <h2><strong><%= @spaceship.name %></strong></h2>
-        <p><strong>💰 <%= @spaceship.price %> €</strong></p>
+        <p data-calcul-date-js-target="price"><strong>💰 <%= @spaceship.price %> €</strong></p>
         <p>📋 <%= @spaceship.description %></p>
         <p>⚔️ <%= @spaceship.weapons %></p>
         <p>⚡ <%= @spaceship.energy %></p>
@@ -13,11 +13,12 @@
       </div>
       <div class="booking-date mt-4">
         <%= simple_form_for [@spaceship, @booking] do |f| %>
-          <%= f.input :booking_start_date, html5: true %>
-          <%= f.input :booking_end_date, html5: true %>
+          <%= f.input :booking_start_date, html5: true, input_html:{ data: { "calcul-date-js-target": "start", action: "change->calcul-date-js#compute" }} %>
+          <%= f.input :booking_end_date, html5: true, input_html:{data: {"calcul-date-js-target": "end", action: "change->calcul-date-js#compute"}} %>
           <%= f.submit "Book now !", class: "btn-flat"%>
         <% end %>
       </div>
+      <p data-calcul-date-js-target="result"></p>
     </div>
     <div class="right col-5 m-5">
       <div class="photo">
