--- a/app/assets/stylesheets/components/_spaceships_index_card.scss
+++ b/app/assets/stylesheets/components/_spaceships_index_card.scss
@@ -8,11 +8,12 @@
   align-items: center;
   padding: 0px;
   border-radius: 5px;
+  text-decoration: none;
 
 }
 
-.a:hover {
-  box-shadow: 0 0 15px rgba(300, 300, 300, 0.2);
+.index-card:hover {
+  box-shadow: 15px 15px 50px rgba(300, 300, 300, 0.2);
 }
 
 .index-card :hover {
