--- a/app/assets/stylesheets/components/_title_properties.scss
+++ b/app/assets/stylesheets/components/_title_properties.scss
@@ -10,5 +10,19 @@
   text-shadow: rgba(255, 255, 255, 0.741) 2px 2px 5px;
   font-size: 50px;
   font-weight: bold;
-  
+}
+
+.subtitle-properties {
+  font-family: 'IBM Plex Sans Devanagari', sans-serif;
+  margin: 0;
+  padding-top: 20px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  // background: linear-gradient(to right, white 0%, white 50%, rgb(65, 3, 163) 100%);
+	// -webkit-background-clip: text;
+	// -webkit-text-fill-color: transparent;
+  color: white;
+  text-shadow: rgba(255, 255, 255, 0.741) 2px 2px 5px;
+  font-size: 30px;
+  font-weight: bold;
 }
