--- a/app/views/components/_flashes.html.erb
+++ b/app/views/components/_flashes.html.erb
@@ -1,2 +1,14 @@
-<div class="alert alert-success" role="alert"></div>
-<div class="alert alert-danger" role="alert"></div>
+<%# <div class="alert alert-success" role="alert"></div>
+<div class="alert alert-danger" role="alert"></div> %>
+<% if notice %>
+  <div class="alert alert-success alert-dismissible fade show m-1" role="alert">
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    <%= notice %>
+  </div>
+<% end %>
+<% if alert %>
+  <div class="alert alert-warning alert-dismissible fade show m-1" role="alert">
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    <%= alert %>
+  </div>
+<% end %>
