--- a/app/assets/stylesheets/components/_booking_card.scss
+++ b/app/assets/stylesheets/components/_booking_card.scss
@@ -53,6 +53,17 @@
   font-size: 18px;
 }
 
+#total-price-js {
+  display: flex;
+  margin: 0;
+  color: $primary;
+  font-weight: bold;
+  font-size: 18px;
+  padding: 10px;
+  align-items: center;
+  justify-content: space-between;
+}
+
 #status {
   display: flex;
   align-items: flex-end;
