--- a/app/views/spaceships/show.html.erb
+++ b/app/views/spaceships/show.html.erb
@@ -4,43 +4,30 @@
       <div class="card-spaceship border-bottom">
         <h2><strong><%= @spaceship.name %></strong></h2>
         <p data-calcul-date-js-target="price"><strong>💰 <%= @spaceship.price %> €</strong></p>
-        <p>📋 <%= @spaceship.description %></p>
-        <p>⚔️ <%= @spaceship.weapons %></p>
-        <p>⚡ <%= @spaceship.energy %></p>
-        <p>💺 <%= @spaceship.seats %></p>
-        <p>📍 <%= @spaceship.address %></p>
-        <p>🪶 <%= @spaceship.gravity%></p>
+        <p>📋 <%= @spaceship.description.capitalize %></p>
+        <p>📍 <%= @spaceship.address.capitalize %></p>
+        <p>💺 <%= pluralize @spaceship.seats, 'seat' %></p>
+        <p>⚡ <%= @spaceship.energy.capitalize %> energy</p>
+        <p>⚔️ <%= @spaceship.weapons.capitalize %></p>
+        <p><%= @spaceship.gravity ? '✅ Gravity ' : '❌ Gravity' %></p>
       </div>
       <div class="booking-date mt-4">
         <%= simple_form_for [@spaceship, @booking] do |f| %>
           <%= f.input :booking_start_date, html5: true, input_html:{ data: { "calcul-date-js-target": "start", action: "change->calcul-date-js#compute" }} %>
           <%= f.input :booking_end_date, html5: true, input_html:{data: {"calcul-date-js-target": "end", action: "change->calcul-date-js#compute"}} %>
-          <%= f.submit "Book now !", class: "btn-flat"%>
-          <div><p data-calcul-date-js-target="result"></p></div>
+          <div class="btn-submit d-flex align-items-center">
+            <%= f.submit "Book now !", class: "btn-medium mt-2"%>
+            <p data-calcul-date-js-target="result" id="total-price-js"></p>
+          </div>
         <% end %>
       </div>
-      <p>📋 <%= @spaceship.description.capitalize %></p>
-      <p>⚔️ <%= @spaceship.weapons.capitalize %></p>
-      <p>⚡ <%= @spaceship.energy.capitalize %> energy</p>
-      <p>💺 <%= pluralize @spaceship.seats, 'seat' %></p>
-      <p>📍 <%= @spaceship.address.capitalize %></p>
-      <p><%= @spaceship.gravity ? '✅ Gravity ' : '❌ Gravity' %></p>
     </div>
-    <div class="booking-date mt-4">
-      <%= simple_form_for [@spaceship, @booking] do |f| %>
-        <%= f.input :booking_start_date, html5: true %>
-        <%= f.input :booking_end_date, html5: true %>
-        <div class="btn-submit d-flex justify-content-center">
-          <%= f.submit "Book now !", class: "btn-medium mt-2"%>
-        </div>
-      <% end %>
-    </div>
-  </div>
-  <div class="right col-5 m-5">
-    <div class="photo">
-      <% @spaceship.photos.each do |photo| %>
-        <%= cl_image_tag photo.key, width: 600 %>
-      <% end %>
+    <div class="right col-5 m-5">
+      <div class="photo">
+        <% @spaceship.photos.each do |photo| %>
+          <%= cl_image_tag photo.key, width: 600 %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
