spaceships view glow up

--- a/app/views/spaceships/index.html.erb
+++ b/app/views/spaceships/index.html.erb
@@ -7,17 +7,20 @@
     <div class= "row d-flex justify-content-around">
       <% @spaceships.each do |spaceship| %>
 
-          <div class= "index-card">
+          <div class= "index-card position-relative">
             <%= link_to spaceship_path(spaceship) do %>
               <img src="<%= cl_image_path spaceship.photos.first.key%>", alt="...">
-              <div class="index-card-text">
+              <div class= "index-card-content">
                 <div>
                   <p class="card-title"><strong><%= spaceship.name %></strong></p>
                   <p class="card-text"><%= spaceship.address %></p>
-                  <p><strong><%= spaceship.price %>€/day</strong></p>
+                </div>
+                <div>
                 </div>
               </div>
+              <p class="position-absolute" style="bottom: 0px; right: 10px; color: purple"><strong><%= spaceship.price %>€/day</strong></p>
             <%end%>
+
           </div>
 
       <% end %>
