--- a/app/assets/stylesheets/components/_spaceships_index_card.scss
+++ b/app/assets/stylesheets/components/_spaceships_index_card.scss
@@ -8,9 +8,10 @@
   align-items: center;
   padding: 0px;
   border-radius: 5px;
-  text-decoration: none;
-
-}
+  a{
+    text-decoration: none;
+  }
+ }
 
 .index-card:hover {
   box-shadow: 15px 15px 50px rgba(300, 300, 300, 0.2);
@@ -26,8 +27,12 @@
  object-fit: cover;
 }
 
-.index-card-text {
+.index-card-content {
+  display: flex;
   padding: 12px;
-
+  flex-direction: column;
+  justify-content: space-between;
+  color: black;
+  // height: 100%;
 
 }
