--- a/app/views/spaceships/index.html.erb
+++ b/app/views/spaceships/index.html.erb
@@ -2,7 +2,7 @@
   <h1 class= "text-center page-title title-properties">All our available spaceships</h1>
   <%# faire des colonnes  %>
 
-  <div class="container justify-content-center ">
+  <div class="container justify-content-center d-flex">
     <%#  dans la div organiser les cards avec col etc %>
     <div class= "row d-flex justify-content-around">
       <% @spaceships.each do |spaceship| %>
