--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -11,7 +11,7 @@
   font-family: 'Comfortaa', cursive;
   font-size: 21px;
   padding-top: 30px;
-  padding-bottom: 10px;
+  // padding-bottom: 10px;
   margin-bottom: 30px;
   color: white;
   // opacity: .8;
