--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -41,6 +41,7 @@
               <%= button_to "✅", accept_owner_booking_path(owner_booking), method: :patch %>
               <%= button_to "❌", decline_owner_booking_path(owner_booking), method: :patch %>
             </div>
+          </div>
       </div>
     <% elsif owner_booking.validated == "confirmed"%>
             <div class="card-product">
